[gd_scene load_steps=7 format=2]

[ext_resource path="res://inimigo_segue.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
height = 1.09295

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CapsuleMesh" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.236103, 1.75912, 1.77311 )

[sub_resource type="BoxShape" id=5]

[node name="inimigo_segue" type="KinematicBody"]
transform = Transform( 0.16173, 0, 0, 0, -8.67612e-09, -0.198487, 0, 0.144489, -6.31581e-09, 0, 0, 0 )
collision_layer = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="andar" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, -1.06581e-14, 1, -25.5298, 0, 0 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="andar"]
transform = Transform( 1, 0, 0, 0, 1, -7.10543e-15, 0, 6.03961e-14, 1, 0, -8.29284e-08, -1.89718 )
shape = SubResource( 4 )

[node name="parar" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 1.06581e-14, 0, -1.06581e-14, 1, 24.5554, 0, 0 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="parar"]
transform = Transform( 1, 0, 0, 0, 1, -7.10543e-15, 0, 6.03961e-14, 1, 0, -8.29284e-08, -1.89718 )
shape = SubResource( 4 )

[node name="volta_andar" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 2.4869e-14, 0, -1.06581e-14, 1, 22.9105, 0, 0 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="volta_andar"]
transform = Transform( 1, 0, 0, 0, 1, -7.10543e-15, 0, 6.03961e-14, 1, 0, -8.29284e-08, -1.89718 )
shape = SubResource( 4 )

[node name="ir_esquerda" type="Area" parent="."]
transform = Transform( 0.159348, 0, 0, 0, 4.27708, 1.85259e-07, 0, 1.85259e-07, 8.51531, -2.7795, -3.88462e-07, -8.88699 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="ir_esquerda"]
shape = SubResource( 5 )

[node name="ir_direita" type="Area" parent="."]
transform = Transform( 0.159348, 0, 0, 0, 4.27708, 1.98844e-07, 0, 1.98843e-07, 8.8261, 3.10872, -3.96532e-07, -9.0716 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="ir_direita"]
shape = SubResource( 5 )

[connection signal="body_entered" from="andar" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="parar" to="." method="_on_parar_body_entered"]
[connection signal="body_entered" from="volta_andar" to="." method="_on_volta_andar_body_entered"]
[connection signal="body_entered" from="ir_esquerda" to="." method="_on_ir_esquerda_body_entered"]
[connection signal="body_entered" from="ir_direita" to="." method="_on_ir_direita_body_entered"]
